# iot-engine

./: .clang-format  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  biome.json  package.json  tsconfig.json  vcpkg.json  vite-env.d.ts  vite.config.ts
.github/workflows/: build.yml
cmake/: ApplyGitPatch.cmake
cmake/patches/: ruvia-mingw-postgresql-link-group.patch
docs/: README.md  api.md  architecture.md  authorization.md  database.md  design-patterns.md  device-communication.md  edge-node.md  iot-manager-reference.md  project-structure.md  redis-streams.md  rewrite-plan.md  southbridge-async-migration.md
docs/superpowers/plans/: 2026-07-21-layering-unification-slice-1-device.md
docs/superpowers/specs/: 2026-07-21-full-stack-layering-unification-design.md
edgenode/: README.md
edgenode/openwrt/: Makefile  README.md
edgenode/openwrt/files/: NOTICE  edgenode-start  edgenode.config  edgenode.init  iot-edge.config
edgenode/openwrt/package/iot-edge/: Makefile
edgenode/openwrt/proto/: edge.proto
edgenode/openwrt/src/: edge_acquisition.c  edge_acquisition.h  edge_capability.c  edge_capability.h  edge_config.c  edge_config.h  edge_device_runtime.c  edge_device_runtime.h  edge_firmware.c  edge_firmware.h  edge_memory.c  edge_memory.h  edge_modbus.c  edge_modbus.h  edge_modem.c  edge_modem.h  edge_network.c  edge_network.h  edge_platform.c  edge_platform.h  edge_process.c  edge_process.h  edge_protocol.c  edge_protocol.h  edge_runtime_config.c  edge_runtime_config.h  edge_s7.c  edge_s7.h  edge_sha256.h  edge_spool.c  edge_spool.h  edge_terminal.c  edge_terminal.h  edge_ws.c  edge_ws.h  main.c
edgenode/proto/: edge.proto
service/: server.cpp
service/common/: http.h  id.validation.h  packet-log.cpp  packet-log.h  packet_log.cpp  types.h  uuid.h
service/common/bridge/: message.contract.h
service/common/message/: contract.h
service/config/: schema.h
service/domains/access/: access.controller.h  access.schema.h  access.service.h  access.types.h
service/domains/auth/: auth.controller.h  auth.schema.h  auth.service.h  auth.types.h
service/domains/dept/: dept.controller.h  dept.schema.h  dept.service.h
service/domains/device/: device.controller.h  device.schema.h  device.service.h  device.types.h
service/domains/edge/: edge.controller.h  edge.schema.h  edge.service.h  edge.types.h
service/domains/link/: link.controller.h  link.schema.h  link.service.h  link.types.h
service/domains/protocol/: protocol.controller.h  protocol.schema.h  protocol.service.h  protocol.types.h
service/domains/role/: role.controller.h  role.schema.h  role.service.h
service/domains/user/: user.controller.h  user.schema.h  user.service.h  user.types.h
service/features/access/: contract.h  event.h  webhook.h
service/features/collector/: client.h  command.h  config.h  engine.h  modbus.h  protocol.h  registry.h  runtime.h  s7.h  sl651.h  stream.h  tcp.h  timer.h  types.h  worker.h
service/features/command/: queue.h  result.h  service.h
service/features/edge/: config.h  edge.proto  gateway.h  projector.h
service/features/event/: config.h
service/features/runtime/: projector.h  reconciler.h  repository.h
service/features/telemetry/: latest.h  persistence.h
service/middleware/: auth.h  permission.h
service/modules/edge/: edge.config.service.h  edge.controller.h  edge.gateway.h  edge.projector.h  edge.proto  edge.protocol.h  edge.schema.h  edge.service.h  edge.types.h  web_terminal.proto
service/modules/iot/device/: device.controller.h  device.schema.h  device.service.h  device.types.h
service/modules/iot/device-group/: device-group.controller.h  device-group.service.h
service/modules/iot/link/: link.controller.h  link.schema.h  link.service.h  link.types.h
service/modules/iot/protocol/: protocol.controller.h  protocol.schema.h  protocol.service.h  protocol.types.h
service/modules/northbridge/command/: command_result.runtime.h  device_command.service.h  protocol_command.queue.h
service/modules/northbridge/config/: runtime_config.projector.h  runtime_config.reconciler.h  runtime_config.repository.h
service/modules/northbridge/device/: device.access.h  device.controller.h  device.schema.h  device.service.h  device.share.service.h  device.types.h
service/modules/northbridge/link/: link.controller.h  link.schema.h  link.service.h  link.types.h
service/modules/northbridge/open/: open_access.common.h  open_access.controller.h  open_access.event.h  open_access.service.h  open_webhook.runtime.h
service/modules/northbridge/protocol/: protocol.controller.h  protocol.schema.h  protocol.service.h  protocol.types.h
service/modules/northbridge/queue/: config_event.publisher.h
service/modules/northbridge/telemetry/: device_latest.redis.h  telemetry_persistence.runtime.h
service/modules/southbridge/: runtime.types.h  runtime_config.redis.h  runtime_config.repository.h  southbridge.pool.h  southbridge.runtime.h  southbridge.worker.h  worker_timer.scheduler.h
service/modules/southbridge/network/: tcp_link.manager.h  worker_tcp.runtime.h
service/utils/: jwt.h  password.h
tests/: access-test.cpp  collector-protocol-test.cpp  edge-protocol-test.cpp  edge_config_test.c  edge_protocol_test.c  edge_protocol_test.cpp  edge_runtime_test.c  open_access_test.cpp  southbridge_protocol_test.cpp  terminal-protocol-test.ts  web_terminal_protocol_test.ts
tests/stress/: collector.ts  config-reload.ts  latest-read-model.ts  setup.ts  southbridge.ts
web/: index.html  main.tsx
web/components/: DeviceCard.tsx  ErrorBoundary.tsx  FormModal.tsx  PageContainer.tsx  StatusTag.tsx
web/config/: app.ts
web/hooks/: useDebounceFn.ts  useMutation.ts  usePermission.ts
web/layouts/: AdminLayout.tsx
web/pages/home/: index.tsx
web/pages/login/: index.tsx  login.api.ts  login.client.ts  login.schema.ts  login.service.ts  login.types.ts
web/providers/: Message.tsx  TanstackQuery.tsx
web/routes/: index.tsx
web/store/: authStore.ts
web/styles/: index.css
web/utils/: dateTime.ts  http.ts  query.ts  types.ts  validation.ts
(+112 files in other folders)
